<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slip6 Resources</string>
    <string name="hello_text">Hello, Android Resources!</string>
    <string name="app_label_register">Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
</resources>
